# html-minifier

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci-version.yml  ci.yml
src/: errors.rs  functions.rs  html_minifier_helper.rs  html_writer.rs  lib.rs
tests/: html_minifier.rs  mix.rs  steps.rs
tests/data/: README.md  index.min.html  w3schools.com_tryhow_css_example_website.htm
