[package]
name = "html-minifier"
version = "3.0.12"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/html-minifier"
homepage = "https://magiclen.org/html-minifier"
keywords = ["html", "minify", "sctipt", "style"]
categories = ["no-std", "encoding"]
description = "This library can help you generate and minify your HTML code at the same time. It also supports to minify JS and CSS in `<style>`, `<script>` elements, and ignores the minification of `<pre>`, `<code>` and `<textarea>` elements."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
html-escape = "0.2"
cow-utils = "0.1"
minifier = "0.0.41"

[dependencies.educe]
version = ">=0.4"
features = ["Debug", "Default"]
default-features = false

[features]
default = ["std"]
std = []
