[package]
name = "html-minifier"
version = "5.0.1"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2024"
rust-version = "1.89.0"
repository = "https://github.com/magiclen/html-minifier"
homepage = "https://magiclen.org/html-minifier"
keywords = ["html", "minify", "script", "style"]
categories = ["encoding"]
description = "This library can help you generate and minify your HTML code at the same time. It also supports to minify JS and CSS in `<style>`, `<script>` elements, and ignores the minification of `<pre>`, `<code>` and `<textarea>` elements."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
html-escape = "0.2"
str-utils = "0.3"
minifier = "0.3"

[dependencies.educe]
version = "0.5"
features = ["Debug", "Default"]
default-features = false